# dependencmake

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  update_license.sh
.github/workflows/: ci.yaml
src/dependen6make/: __main__.py  cmake.py  commands.py  config.py  dependency.py  dependency_list.py  exceptions.py  filesystem.py
src/dependen6make/resources/: dependen6make.yaml
src/dependencmake/: __main__.py  cmake.py  config.py  dependency.py  dependency_list.py  exceptions.py  filesystem.py  version.py
src/dependencmake/resources/: dependencmake.yaml
tests/: path.py  test_cmake.py  test_commands.py  test_config.py  test_dependency.py  test_dependency_list.py  test_dependency_list_integration.py  test_filesystem.py  test_main.py  test_main_integration.py
tests/resources/: dependen6make.yaml
tests/resources/subdependencies/: dependencmake.yaml
tests/resources/subdependencies/dependencmake/fetch/dep1_36e47005e2edb6e84fdb0e2e411bff5a/: dependencmake.yaml
tests/resources/subdependencies/dependencmake/fetch/dep2_4b35bd592421ea9170dfb690d7550744/: dependencmake.yaml
