[tool.poetry]
name = "dependencmake"
version = "0.1.0"
description = "Dependencies manager for projects using CMake"
authors = ["Paul Zehner <paul.zehner@alumni.enseeiht.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pzehner/dependencmake"
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Operating System :: OS Independent",
        "Environment :: Console",
        "Intended Audience :: Developers"
]
packages = [
        {include="dependencmake", from="src"}
]
include = [
        {path="tests", format="sdist"}
]

[tool.poetry.urls]
"Bug tracker" = "https://github.com/pzehner/dependencmake/issues"

[tool.poetry.scripts]
dependencmake = "dependencmake.__main__:main"

[tool.poetry.dependencies]
python = "^3.6.1"

dataclasses = {version="^0.8", python=">=3.6,<3.7"}
furl = "^2.1.0"
GitPython = "^3.1.13"
importlib-resources = {version="^5.1.0", python="<3.7"}
packaging = "^21.0"
path = "^15.1.0"
PyYAML = "^5.4.1"
tqdm = "^4.56.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
bump2version = "^1.0.1"
changelog-cli = "^0.7.1"
codecov = "^2.1.11"
isort = "^5.8.0"
mypy = "^0.812"
pre-commit = "^2.11.1"
pytest = "^6.2.2"
pytest-cov = "^2.12.1"
pytest-mock = "^3.5.1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
