[tool.poetry]
name = "dependencmake"
version = "0.1.0"
description = "Dependencies manager for projects using CMake"
authors = ["Paul Zehner <paul.zehner@alumni.enseeiht.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pzehner/dependencmake"
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Operating System :: OS Independent",
        "Environment :: Console",
        "Intended Audience :: Developers"
]
packages = [
        {include="dependencmake", from="src"}
]
include = [
        {path="tests", format="sdist"}
]

[tool.poetry.urls]
"Bug tracker" = "https://github.com/pzehner/dependencmake/issues"

[tool.poetry.scripts]
dependencmake = "dependencmake.__main__:main"

[tool.poetry.dependencies]
python = "^3.8.1"

furl = "^2.1.3"
GitPython = "^3.1.42"
packaging = "^23.2"
path = "^16.10.0"
PyYAML = "^6.0.1"
tqdm = "^4.66.2"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
bump2version = "^1.0.1"
changelog-cli = "^0.7.1"
codecov = "^2.1.13"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.5.0"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
