[metadata]
name = dependencmake
version = 0.0.0
author = Paul Zehner <paul.zehner@alumni.enseeiht.fr>
description = Dependencies manager for projects using CMake
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://example.com
project_urls =
        Bug tracker=https://example.com/issues
classifiers =
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 3
        Operating System :: OS Independent
        Environment :: Console
        Intended Audience :: Developers

[options]
package_dir =
        =src
packages = find:

# dependencies are pinned by interval
install_requires =
        dataclasses>=0.8,<1; python_version < '3.7'
        furl>=2.1.0,<2.2
        GitPython>=3.1.13,<3.2
        importlib-resources>=5.1.0,<5.2; python_version < '3.7'
        path>=15.1.0,<15.2
        PyYAML>=5.4.1,<5.5
        tqdm>=4.56.2,<4.57
include_package_data = true

[options.extras_require]
tests =
        black>=20.8b1,<21
        codecov>=2.1.11,<2.2
        coverage>=5.4,<5.5
        flake8>=3.8.4,<3.9
        pytest-mock>=3.5.1,<3.6
        pytest>=6.2.2,<6.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        dependencmake = dependencmake.__main__:main

[flake8]
max-line-length = 88
ignore = E203, W503

[coverage:run]
source = src

[mypy]
ignore_missing_imports = True
